--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 			<div class="tab-content overflow-hide show" title="项目">
 
  <a href="zw/U010.html" target="_blank"  class="c-flex__itemm is--invisionstudio w-inline-block">
-        <div class="c-tool-logo"> <img data-src="https://img.gejiba.com/images/6a3da3b255b4f1d4fb4b054cd6e3f068.jpg" ></div>
+        <div class="c-tool-logo"> <img data-src="https://gd-hbimg.huaban.com/2f36f0add67c0bf8e38e363172b52d4ff0edf1555fa69-LlOjG9_fw1200webp" ></div>
         <div class="c-tool-titles"><h3 class="c-tool-title">星创天地，一站式服务平台。</h3> <p id="ban">界面设计</p></div></a>
 		
 <a href="zw/U020.html" target="_blank"  class="c-flex__itemm is--invisionstudio w-inline-block">
