--- a/index.html
+++ b/index.html
@@ -128,27 +128,27 @@
         <div class="c-tool-titles"><h3 class="c-tool-title">星创天地，一站式服务平台。</h3> <p id="ban">界面设计</p></div></a>
 		
 <a href="zw/U020.html" target="_blank"  class="c-flex__itemm is--invisionstudio w-inline-block">
-        <div class="c-tool-logo"> <img data-src="https://img.gejiba.com/images/77ae5a5655e2cda902d883d9b97263c1.jpg" ></div>
+        <div class="c-tool-logo"> <img data-src="https://gd-hbimg.huaban.com/bf2deb91327f2323b4317c14cd281bf71c80e9e65ad8b-StlwIw" ></div>
         <div class="c-tool-titles"><h3 class="c-tool-title">打工是不可能打工的，做点零工还行...</h3> <p id="ban">界面设计</p></div></a>		
 
 <a href="zw/U030.html" target="_blank"  class="c-flex__itemm is--invisionstudio w-inline-block">
-        <div class="c-tool-logo"> <img data-src="https://img.gejiba.com/images/452bb1f280a37a830b5a6e329f1db385.jpg" ></div>
+        <div class="c-tool-logo"> <img data-src="https://gd-hbimg.huaban.com/18e6748bf0123271830be0ef3c9276d1f48ba66e636d2-f2BOvl" ></div>
         <div class="c-tool-titles"><h3 class="c-tool-title">订餐和叫车这两件事，一步到位！</h3> <p id="ban">界面设计</p></div></a>
 
 <a href="zw/U040.html" target="_blank"  class="c-flex__itemm is--invisionstudio w-inline-block">
-        <div class="c-tool-logo"> <img data-src="https://img.gejiba.com/images/b65785acd9342ec68f5d570679ac8df4.jpg" ></div>
+        <div class="c-tool-logo"> <img data-src="https://gd-hbimg.huaban.com/e1ed58ae20944bb8966ddf2fae0136670d30850a72727-xYdErX" ></div>
         <div class="c-tool-titles"><h3 class="c-tool-title">这家酒家的生猛海鲜绝了，快来尝尝！</h3> <p id="ban">界面设计</p></div></a>
 		
 <a href="zw/U050.html" target="_blank"  class="c-flex__itemm is--invisionstudio w-inline-block">
-        <div class="c-tool-logo"> <img data-src="https://img.gejiba.com/images/1729c1f62aeb166599ca49732c29e4b5.jpg" ></div>
+        <div class="c-tool-logo"> <img data-src="https://gd-hbimg.huaban.com/033e2b17d704a5dce87b7543af6a81210394e7b565964-Ntf32W" ></div>
         <div class="c-tool-titles"><h3 class="c-tool-title">微赏教育平台，优质培训机构聚居地。</h3> <p id="ban">界面设计</p></div></a>
 
 <a href="http://work.bizihu.com/136.html" target="_blank"  class="c-flex__itemm is--invisionstudio w-inline-block">
-        <div class="c-tool-logo"> <img data-src="https://img.gejiba.com/images/f9e5041185dd71f1d3a15c3bd42d7de7.jpg" ></div>
+        <div class="c-tool-logo"> <img data-src="https://gd-hbimg.huaban.com/10786380a4b2024435d1dca2cb7cf38a784deb2372adf-iUzjXW" ></div>
         <div class="c-tool-titles"><h3 class="c-tool-title">湛赏社区，好物好房好生活！</h3> <p id="ban">界面设计</p></div></a>
 
 <a href="" target="_blank"  class="c-flex__itemm is--invisionstudio w-inline-block">
-        <div class="c-tool-logo"> <img data-src="https://img.gejiba.com/images/4ec35c02384fd5cd9382221dd2c2c120.jpg" ></div>
+        <div class="c-tool-logo"> <img data-src="https://gd-hbimg.huaban.com/3f8d85ff8a86c45ae9a120662ffd233d403f85d85a572-RVgJiE" ></div>
         <div class="c-tool-titles"><h3 class="c-tool-title">如果你还看不透自己，那就来算算吧~</h3> <p id="ban">界面设计</p></div></a>
 		
 <a href="zw/U080.html" target="_blank"  class="c-flex__itemm is--invisionstudio w-inline-block">
