--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         <div class="c-tool-titles"><h3 class="c-tool-title">白嫖！湛江给市民发放500万消费券！</h3> <p id="ban">界面设计</p></div></a>
 
 <a href="zw/U090.html" target="_blank"  class="c-flex__itemm is--invisionstudio w-inline-block">
-        <div class="c-tool-logo"> <img data-src="https://img.gejiba.com/images/6de493ce5edfaeeb67e4ab974ccbce62.jpg" ></div>
+        <div class="c-tool-logo"> <img data-src="https://gd-hbimg.huaban.com/f5743d5b18feb0df1dd8601403c1e86abd67424c73fe4-lCUeMD" ></div>
         <div class="c-tool-titles"><h3 class="c-tool-title">一店一菜，刷刷视频就发现！</h3> <p id="ban">界面设计</p></div></a>
 	
 
