--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
 				<a href="zw/U255.html" target="_blank"  class="c-flex__itemm is--invisionstudio w-inline-block">
         <div class="c-tool-logo"> <img data-src="https://gd-hbimg.huaban.com/76b01a23c93fbba1b04c68d04d47a14e801905a26f0fc-iCGwy2"></div>
-        <div class="c-tool-titles"><h3 class="c-tool-title">物业资产管理，贯穿于物业整个寿命周期的综合性管理服务。</h3> <p id="ban">界面设计</p></div></a>
+        <div class="c-tool-titles"><h3 class="c-tool-title">物业资产管理，贯穿于物业的综合性管理服务。</h3> <p id="ban">界面设计</p></div></a>
 
 				<a href="zw/U256.html" target="_blank"  class="c-flex__itemm is--invisionstudio w-inline-block">
         <div class="c-tool-logo"> <img data-src="https://gd-hbimg.huaban.com/9c0ea45b24ce5bfc1ac8ef017894c5c67081dc5069cff-Bt20Tg"></div>
