--- a/zw/U251.html
+++ b/zw/U251.html
@@ -123,7 +123,7 @@
 				<div class="c-tool-logo"> <img data-src="https://gd-hbimg.huaban.com/4c518ed45d1869700b5d7ba017bfe7cff816d97646aaa3-v5NUmU" ></div>
 				<br/>
 				<p style="font-size: 16px; color: #4c4c4c;text-align: center;">
-                    项目已上线 页面设计累计700+<br>微信搜索 廉江文旅小程序
+                    <br>项目已上线 页面设计累计700+<br>微信搜索 廉江文旅小程序
                 </p>
 </div>
 
