--- a/zw/U253.html
+++ b/zw/U253.html
@@ -102,7 +102,7 @@
 
 
       </div>
-      <div class="copyright_certificate">© zwork.bizihu.com</br><a href="https://beian.miit.gov.cn" target="_blank" style="color: #ababab;">暂无备案</a></div>
+      <div class="copyright_certificate">© zwork.4nnn.cn</br><a href="https://beian.miit.gov.cn" target="_blank" style="color: #ababab;">暂无备案</a></div>
 </div>
 
       <div class="zw_y" style="padding-top: 80px;">
@@ -120,8 +120,8 @@
                 </p>
                 
 				<br/>
-				<div class="c-tool-logo"> <img data-src="https://gd-hbimg.huaban.com/f46a9b22bd5ea7a7be4ba1586f22abc51117726b19f801-WwZF9S" ></div>
-				<br/>
+				<div class="c-tool-logo"> <img data-src="https://gd-hbimg.huaban.com/bf18c14caf8bfd7309cec12a65af9f997e6635191adbaf-CX3Avx" ></div>
+				<br/><br/>
 				<p style="font-size: 16px; color: #4c4c4c;text-align: center;">
                     <br>谢谢审阅
                 </p>
