--- a/zw/U256.html
+++ b/zw/U256.html
@@ -102,7 +102,7 @@
 
 
       </div>
-      <div class="copyright_certificate">© zwork.bizihu.com</br><a href="https://beian.miit.gov.cn" target="_blank" style="color: #ababab;">暂无备案</a></div>
+      <div class="copyright_certificate">© work.4nnn.cn</br><a href="https://beian.miit.gov.cn" target="_blank" style="color: #ababab;">暂无备案</a></div>
 </div>
 
       <div class="zw_y" style="padding-top: 80px;">
