--- a/zw/U251.html
+++ b/zw/U251.html
@@ -120,12 +120,13 @@
                 </p>
                 
 				<br/>
-				<div class="c-tool-logo"> <img data-src="https://gd-hbimg.huaban.com/4c518ed45d1869700b5d7ba017bfe7cff816d97646aaa3-v5NUmU" ></div>
-			<div class="c-tool-logo"> <img data-src="https://gd-hbimg.huaban.com/b3386d6c4a6474aefbbf1dc50d656310af678a6b12ff92-I6hdFu" ></div>
-			<div class="c-tool-logo"> <img data-src="https://gd-hbimg.huaban.com/f27fbd06b8d336a991469f1caf206abd99c5679e8bf0b-3k5x3J" ></div>
-				<br/><br/><br/>
+				<div class="c-tool-logo"> <img data-src="https://gd-hbimg.huaban.com/4c518ed45d1869700b5d7ba017bfe7cff816d97646aaa3-v5NUmU" >
+			 <img data-src="https://gd-hbimg.huaban.com/b3386d6c4a6474aefbbf1dc50d656310af678a6b12ff92-I6hdFu" >
+			<img data-src="https://gd-hbimg.huaban.com/f27fbd06b8d336a991469f1caf206abd99c5679e8bf0b-3k5x3J" ></div>
+				<br/><br/>
+			<p style="font-size: 16px; color: #4c4c4c;text-align: center;"></p><br/>
 				<p style="font-size: 16px; color: #4c4c4c;text-align: center;">
-                    <br>项目已上线 页面设计累计700+<br>微信搜索 廉江文旅小程序
+                   项目已上线 页面设计累计700+<br>微信搜索 廉江文旅小程序
                 </p>
 </div>
 
