--- a/zw/U251.html
+++ b/zw/U251.html
@@ -9,6 +9,7 @@
 <title>臻作 | 个人作品展示</title>
 <meta name="Keywords" content="UI,UI设计师，界面设计，广告设计，平面设计，小程序设计，主题美化，臻作，个人作品">
 <meta name="description" content="臻作 | 阿臻的个人作品展示网站，喜欢思考，懂得思考，让设计思考成为习惯。">
+<meta name="referrer" content="never">
  <meta name="referrer" content="never">
 <link rel="shortcut icon" href="../static/images/favicon.ico" type="images/x-icon">
 <link rel="stylesheet" type="text/css" href="../static/css/style.css">
@@ -119,14 +120,15 @@
                   智慧旅游服务平台
                 </p>
                 
-				<br>
-				<div class="c-tool-logo"> <img data-src="https://gd-hbimg.huaban.com/4c518ed45d1869700b5d7ba017bfe7cff816d97646aaa3-v5NUmU" ><br>
-			 <img data-src="https://gd-hbimg.huaban.com/b3386d6c4a6474aefbbf1dc50d656310af678a6b12ff92-I6hdFu" ><br>
-			<img data-src="https://gd-hbimg.huaban.com/f27fbd06b8d336a991469f1caf206abd99c5679e8bf0b-3k5x3J" ></div>
-				<br><br>
-			<p style="font-size: 16px; color: #4c4c4c;text-align: center;"></p><br>
+				<br/>
+				<div class="c-tool-logo"> 
+          <img data-src="https://gd-hbimg.huaban.com/4c518ed45d1869700b5d7ba017bfe7cff816d97646aaa3-v5NUmU" >
+          <img data-src="https://gd-hbimg.huaban.com/b3386d6c4a6474aefbbf1dc50d656310af678a6b12ff92-I6hdFu" >
+          <img data-src="https://gd-hbimg.huaban.com/f27fbd06b8d336a991469f1caf206abd99c5679e8bf0b-3k5x3J" >
+        </div>
+				<br/>
 				<p style="font-size: 16px; color: #4c4c4c;text-align: center;">
-                   项目已上线 页面设计累计700+<br>微信搜索 廉江文旅小程序
+                    <br>项目已上线 页面设计累计700+<br>微信搜索 廉江文旅小程序
                 </p>
 </div>
 
