--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <title>臻作 | 个人作品展示</title>
 <meta name="Keywords" content="UI,UI设计师，界面设计，广告设计，平面设计，小程序设计，主题美化，臻作，个人作品">
 <meta name="description" content="臻作 | 阿臻的个人作品展示网站，喜欢思考，懂得思考，让设计思考成为习惯。">
+<meta name="referrer" content="never">
 	  <meta name="referrer" content="never">
 <link rel="shortcut icon" href="static/images/favicon.ico" type="images/x-icon">
 <link rel="stylesheet" type="text/css" href="static/css/style.css">
@@ -153,27 +154,27 @@
 
 			
 
- <a href="" target="_blank"  class="c-flex__itemm is--invisionstudio w-inline-block">
+ <a href="zw/U010.html" target="_blank"  class="c-flex__itemm is--invisionstudio w-inline-block">
         <div class="c-tool-logo"> <img data-src="https://gd-hbimg.huaban.com/2f36f0add67c0bf8e38e363172b52d4ff0edf1555fa69-LlOjG9"></div>
         <div class="c-tool-titles"><h3 class="c-tool-title">星创天地，一站式服务平台。</h3> <p id="ban">界面设计</p></div></a>
 		
-<a href=".html" target="_blank"  class="c-flex__itemm is--invisionstudio w-inline-block">
+<a href="zw/U020.html" target="_blank"  class="c-flex__itemm is--invisionstudio w-inline-block">
         <div class="c-tool-logo"> <img data-src="https://gd-hbimg.huaban.com/bf2deb91327f2323b4317c14cd281bf71c80e9e65ad8b-StlwIw" ></div>
         <div class="c-tool-titles"><h3 class="c-tool-title">打工是不可能打工的，做点零工还行...</h3> <p id="ban">界面设计</p></div></a>		
 
-<a href=".html" target="_blank"  class="c-flex__itemm is--invisionstudio w-inline-block">
+<a href="zw/U030.html" target="_blank"  class="c-flex__itemm is--invisionstudio w-inline-block">
         <div class="c-tool-logo"> <img data-src="https://gd-hbimg.huaban.com/18e6748bf0123271830be0ef3c9276d1f48ba66e636d2-f2BOvl" ></div>
         <div class="c-tool-titles"><h3 class="c-tool-title">订餐和叫车这两件事，一步到位！</h3> <p id="ban">界面设计</p></div></a>
 
-<a href=".html" target="_blank"  class="c-flex__itemm is--invisionstudio w-inline-block">
+<a href="zw/U040.html" target="_blank"  class="c-flex__itemm is--invisionstudio w-inline-block">
         <div class="c-tool-logo"> <img data-src="https://gd-hbimg.huaban.com/e1ed58ae20944bb8966ddf2fae0136670d30850a72727-xYdErX" ></div>
         <div class="c-tool-titles"><h3 class="c-tool-title">这家酒家的生猛海鲜绝了，快来尝尝！</h3> <p id="ban">界面设计</p></div></a>
 		
-<a href=".html" target="_blank"  class="c-flex__itemm is--invisionstudio w-inline-block">
+<a href="zw/U050.html" target="_blank"  class="c-flex__itemm is--invisionstudio w-inline-block">
         <div class="c-tool-logo"> <img data-src="https://gd-hbimg.huaban.com/033e2b17d704a5dce87b7543af6a81210394e7b565964-Ntf32W" ></div>
         <div class="c-tool-titles"><h3 class="c-tool-title">微赏教育平台，优质培训机构聚居地。</h3> <p id="ban">界面设计</p></div></a>
 
-<a href="" target="_blank"  class="c-flex__itemm is--invisionstudio w-inline-block">
+<a href="http://work.bizihu.com/136.html" target="_blank"  class="c-flex__itemm is--invisionstudio w-inline-block">
         <div class="c-tool-logo"> <img data-src="https://gd-hbimg.huaban.com/10786380a4b2024435d1dca2cb7cf38a784deb2372adf-iUzjXW" ></div>
         <div class="c-tool-titles"><h3 class="c-tool-title">湛赏社区，好物好房好生活！</h3> <p id="ban">界面设计</p></div></a>
 
@@ -181,11 +182,11 @@
         <div class="c-tool-logo"> <img data-src="https://gd-hbimg.huaban.com/3f8d85ff8a86c45ae9a120662ffd233d403f85d85a572-RVgJiE" ></div>
         <div class="c-tool-titles"><h3 class="c-tool-title">如果你还看不透自己，那就来算算吧~</h3> <p id="ban">界面设计</p></div></a>
 		
-<a href="https://mp.weixin.qq.com/s/HaG0SScuAlrtTGBKtWTwLw" target="_blank"  class="c-flex__itemm is--invisionstudio w-inline-block">
-        <div class="c-tool-logo"> <img data-src="http://www.leizhou.gov.cn/zjlzgaj/img/0/36/36388/1095521.jpg" ></div>
+<a href="zw/U080.html" target="_blank"  class="c-flex__itemm is--invisionstudio w-inline-block">
+        <div class="c-tool-logo"> <img data-src="https://img.gejiba.com/images/4ba3d8d36fa28a8d370b1ea3c5966638.jpg" ></div>
         <div class="c-tool-titles"><h3 class="c-tool-title">白嫖！湛江给市民发放500万消费券！</h3> <p id="ban">界面设计</p></div></a>
 
-<a href="" target="_blank"  class="c-flex__itemm is--invisionstudio w-inline-block">
+<a href="zw/U090.html" target="_blank"  class="c-flex__itemm is--invisionstudio w-inline-block">
         <div class="c-tool-logo"> <img data-src="https://gd-hbimg.huaban.com/f5743d5b18feb0df1dd8601403c1e86abd67424c73fe4-lCUeMD" ></div>
         <div class="c-tool-titles"><h3 class="c-tool-title">一店一菜，刷刷视频就发现！</h3> <p id="ban">界面设计</p></div></a>
 	
