--- a/zw/G030.html
+++ b/zw/G030.html
@@ -9,6 +9,7 @@
 <title>臻作 | 个人作品展示</title>
 <meta name="Keywords" content="UI,UI设计师，界面设计，广告设计，平面设计，小程序设计，主题美化，臻作，个人作品">
 <meta name="description" content="臻作 | 阿臻的个人作品展示网站，喜欢思考，懂得思考，让设计思考成为习惯。">
+<meta name="referrer" content="never">
 <link rel="shortcut icon" href="../static/images/favicon.ico" type="images/x-icon">
 <link rel="stylesheet" type="text/css" href="../static/css/style.css">
     <link href="../static/css/media_time.css" rel="stylesheet" type="text/css">
