--- a/zw/U253.html
+++ b/zw/U253.html
@@ -9,6 +9,7 @@
 <title>臻作 | 个人作品展示</title>
 <meta name="Keywords" content="UI,UI设计师，界面设计，广告设计，平面设计，小程序设计，主题美化，臻作，个人作品">
 <meta name="description" content="臻作 | 阿臻的个人作品展示网站，喜欢思考，懂得思考，让设计思考成为习惯。">
+<meta name="referrer" content="never">
  <meta name="referrer" content="never">
 <link rel="shortcut icon" href="../static/images/favicon.ico" type="images/x-icon">
 <link rel="stylesheet" type="text/css" href="../static/css/style.css">
@@ -120,7 +121,11 @@
                 </p>
                 
 				<br/>
-				<div class="c-tool-logo"> <img data-src="https://gd-hbimg.huaban.com/bf18c14caf8bfd7309cec12a65af9f997e6635191adbaf-CX3Avx" ></div>
+        <div class="c-tool-logo"> <img data-src="https://gd-hbimg.huaban.com/bf18c14caf8bfd7309cec12a65af9f997e6635191adbaf-CX3Avx" >
+          <img data-src="https://gd-hbimg.huaban.com/149b32408682cbb2c0d089f9e615b375af9de7e21d3825-0yLH2N" > 
+          <img data-src="https://gd-hbimg.huaban.com/cd1716281609b7f8cf38a7b02c839466ee86a4cd10630f-UWhvGy" > 
+        
+        </div>
 				<br/><br/>
 				<p style="font-size: 16px; color: #4c4c4c;text-align: center;">
                     <br>谢谢审阅
