--- a/zw/IC020.html
+++ b/zw/IC020.html
@@ -114,13 +114,21 @@
         <div id="pingluns" class="resources-detail left" >
 
                 <div class="sponsor-list">
-                                  <h2 style="font-weight: 500; margin: 7px 0 20px;">轻拟物图标</h2>
+                                  <h2 style="font-weight: 500; margin: 7px 0 20px;">后台系统图标七百余</h2>
                 <p style="font-size: 16px; color: #4c4c4c;text-align: center;">
                   ...
                 </p>
                 
 				<br/>
-				<img src="https://img.gejiba.com/images/59eddeb22a20d475da4cbac42aa0471d.jpg"   />
+        <img src="https://gd-hbimg.huaban.com/4cf69a7262c18eb98fd353ef92ad4496b507ad81acae-oXBxWX"   />
+        <img src="https://gd-hbimg.huaban.com/598a3cf277d0152fcdee9f8a2b61e9311deea66edc2a-9OlM4f"   />
+        <img src="https://gd-hbimg.huaban.com/594c07a7e930c31a56b9100acd10d1c680e320ef1a519-LPzoD0"   />
+        <img src="https://gd-hbimg.huaban.com/4dc1f15956febfdbc7a7ceed4b91bfdd8c25bfad108981-eWjtsA"   />
+        <img src="https://gd-hbimg.huaban.com/c553c8272b4cbfea9bc0523045cae52ffee88b5023438-YdP5fm"   />
+        <img src="https://gd-hbimg.huaban.com/e82ca8d7e1f1a996d2ed257b28dcc74cc7eb37a61f12b-rtvRVQ"   />
+        <img src="https://gd-hbimg.huaban.com/73f781e4122f236b85555036d6e91e2d256a84351236c-cioXUU"   />
+
+
 				</div>
 				<br/>
 				<p style="font-size: 16px; color: #4c4c4c;text-align: center;">
