--- a/zw/U257.html
+++ b/zw/U257.html
@@ -122,6 +122,7 @@
                 
 				<br/>
         <div class="c-tool-logo"> 
+          <img data-src="https://gd-hbimg.huaban.com/42895b66a2cfe56716568960085947378f6596016f5af-kVVtRi" > 
           <img data-src="https://gd-hbimg.huaban.com/b03a0f9a88269b54d5045d767a8bc2eda45872e76757f5-ahz84P" >
           <img data-src="https://gd-hbimg.huaban.com/c0e93ada107ec859ec2fd5ef625bb646f5e66ea024ee86-IbOsW9" >
           <img data-src="https://gd-hbimg.huaban.com/840a216b70ff993d214f920e5e99383c5cd6fb6e17fd29-ojAbBd" >
