--- a/GLU.html
+++ b/GLU.html
@@ -120,7 +120,7 @@
                 </p>
 				<br/>
 				<br/>
-				<div>
+				<div class="c-tool-logo">
 				<h2 style="font-weight: 500; margin: 48px 0 20px;">B端/后台/终端系统</h2>
 				<p style="font-size: 16px; color: #4c4c4c;text-align: center;">
                 多个项目的部分页面设计
@@ -136,7 +136,7 @@
         <img data-src="https://gd-hbimg.huaban.com/42895b66a2cfe56716568960085947378f6596016f5af-kVVtRi" > 
 				<br/>
 				
-				<div>
+				<div class="c-tool-logo">
 				<h2 style="font-weight: 500; margin: 48px 0 20px;">数据大屏</h2>
 				<p style="font-size: 16px; color: #4c4c4c;text-align: center;">
           多个项目的部分页面设计
@@ -148,8 +148,8 @@
         <img data-src="https://gd-hbimg.huaban.com/acbb7adc034e5aba2653362da311abbbbaeece5e21fe86-ygZlAZ" > 
 				<br/>
 				</div>
-				<div>
-				<h2 style="font-weight: 500; margin: 48px 0 20px;">企业官网</h2>
+				<div class="c-tool-logo">
+				<h2 style="font-weight: 500; margin: 48px 0 20px;">其他页面</h2>
 				<p style="font-size: 16px; color: #4c4c4c;text-align: center;">
                   ...
                 </p>
