--- a/F.html
+++ b/F.html
@@ -119,9 +119,23 @@
 
  <h2 style="font-weight: 800; margin: 7px 0 20px;">○ ○ ○</h2>
                 <p style="font-size: 16px; color: #4c4c4c;text-align: center;">
-                  作品集网站的搭建
+                  了解HTML的基本逻辑
                 </p>
 
+                <h2 style="font-weight: 800; margin: 7px 0 20px;">○ ○ ○</h2>
+                <p style="font-size: 16px; color: #4c4c4c;text-align: center;">
+                  公众号运营
+                </p>
+
+                <h2 style="font-weight: 800; margin: 7px 0 20px;">○ ○ ○</h2>
+                <p style="font-size: 16px; color: #4c4c4c;text-align: center;">
+                  视频剪辑
+                </p>
+
+                <h2 style="font-weight: 800; margin: 7px 0 20px;">○ ○ ○</h2>
+                <p style="font-size: 16px; color: #4c4c4c;text-align: center;">
+                  AI生图 素材生成
+                </p>
 
 
  <div class="c-footer"><p class="texewx2">暂无更多</p><p class="texewx4" >臻 · 作</p></div>
