--- a/F.html
+++ b/F.html
@@ -134,7 +134,7 @@
 
                 <h2 style="font-weight: 800; margin: 7px 0 20px;">○ ○ ○</h2>
                 <p style="font-size: 16px; color: #4c4c4c;text-align: center;">
-                  AI生图 素材生成
+                  AI运用 素材生成
                 </p>
 
 
