--- a/zw/IC020.html
+++ b/zw/IC020.html
@@ -114,7 +114,7 @@
 <div id="zoom" class="container resources-detail-container">
         <div id="pingluns" class="resources-detail left" >
 
-                <div class="sponsor-list">
+                <div class="sponsor-list c-tool-logo">
                                   <h2 style="font-weight: 500; margin: 7px 0 20px;">后台系统图标七百余</h2>
                 <p style="font-size: 16px; color: #4c4c4c;text-align: center;">
                   ...
