--- a/zw/IC020.html
+++ b/zw/IC020.html
@@ -9,7 +9,7 @@
 <title>臻作 | 个人作品展示</title>
 <meta name="Keywords" content="UI,UI设计师，界面设计，广告设计，平面设计，小程序设计，主题美化，臻作，个人作品">
 <meta name="description" content="臻作 | 阿臻的个人作品展示网站，喜欢思考，懂得思考，让设计思考成为习惯。">
-<meta name="referrer" content="never">
+<meta name="referrer" content="never">
 <meta name="referrer" content="never">
 <link rel="shortcut icon" href="../static/images/favicon.ico" type="images/x-icon">
 <link rel="stylesheet" type="text/css" href="../static/css/style.css">
@@ -114,7 +114,7 @@
 <div id="zoom" class="container resources-detail-container">
         <div id="pingluns" class="resources-detail left" >
 
-                <div class="sponsor-list c-tool-logo">
+                <div class="sponsor-list">
                                   <h2 style="font-weight: 500; margin: 7px 0 20px;">后台系统图标七百余</h2>
                 <p style="font-size: 16px; color: #4c4c4c;text-align: center;">
                   ...
@@ -124,7 +124,6 @@
         <img src="https://gd-hbimg.huaban.com/4cf69a7262c18eb98fd353ef92ad4496b507ad81acae-oXBxWX"   />
         <img src="https://gd-hbimg.huaban.com/598a3cf277d0152fcdee9f8a2b61e9311deea66edc2a-9OlM4f"   />
         <img src="https://gd-hbimg.huaban.com/594c07a7e930c31a56b9100acd10d1c680e320ef1a519-LPzoD0"   />
-	      <img src="https://gd-hbimg.huaban.com/2e4302b3933bbaf938002690886dc5f6c605c19812640-Tp34FR"   />		
         <img src="https://gd-hbimg.huaban.com/4dc1f15956febfdbc7a7ceed4b91bfdd8c25bfad108981-eWjtsA"   />
         <img src="https://gd-hbimg.huaban.com/c553c8272b4cbfea9bc0523045cae52ffee88b5023438-YdP5fm"   />
         <img src="https://gd-hbimg.huaban.com/e82ca8d7e1f1a996d2ed257b28dcc74cc7eb37a61f12b-rtvRVQ"   />
