--- a/zw/IC020.html
+++ b/zw/IC020.html
@@ -128,6 +128,8 @@
         <img src="https://gd-hbimg.huaban.com/c553c8272b4cbfea9bc0523045cae52ffee88b5023438-YdP5fm"   />
         <img src="https://gd-hbimg.huaban.com/e82ca8d7e1f1a996d2ed257b28dcc74cc7eb37a61f12b-rtvRVQ"   />
         <img src="https://gd-hbimg.huaban.com/73f781e4122f236b85555036d6e91e2d256a84351236c-cioXUU"   />
+<img src="https://gd-hbimg.huaban.com/4f6340c47b6a0211c4a6602f2051912bfd487dc81275c-sFIEqD"   />
+			
 
 
 				</div>
