--- a/zw/IC020.html
+++ b/zw/IC020.html
@@ -124,6 +124,8 @@
         <img src="https://gd-hbimg.huaban.com/4cf69a7262c18eb98fd353ef92ad4496b507ad81acae-oXBxWX"   />
         <img src="https://gd-hbimg.huaban.com/598a3cf277d0152fcdee9f8a2b61e9311deea66edc2a-9OlM4f"   />
         <img src="https://gd-hbimg.huaban.com/594c07a7e930c31a56b9100acd10d1c680e320ef1a519-LPzoD0"   />
+			<img src="https://gd-hbimg.huaban.com/2e4302b3933bbaf938002690886dc5f6c605c19812640-Tp34FR"   />
+			
         <img src="https://gd-hbimg.huaban.com/4dc1f15956febfdbc7a7ceed4b91bfdd8c25bfad108981-eWjtsA"   />
         <img src="https://gd-hbimg.huaban.com/c553c8272b4cbfea9bc0523045cae52ffee88b5023438-YdP5fm"   />
         <img src="https://gd-hbimg.huaban.com/e82ca8d7e1f1a996d2ed257b28dcc74cc7eb37a61f12b-rtvRVQ"   />
