--- a/zw/IC020.html
+++ b/zw/IC020.html
@@ -115,7 +115,7 @@
         <div id="pingluns" class="resources-detail left" >
 
                 <div class="sponsor-list">
-                                  <h2 style="font-weight: 500; margin: 7px 0 20px;">后台系统图标七百余</h2>
+                                  <h2 style="font-weight: 500; margin: 7px 0 20px;">后台功能图标优化 700+</h2>
                 <p style="font-size: 16px; color: #4c4c4c;text-align: center;">
                   ...
                 </p>
