--- a/IC.html
+++ b/IC.html
@@ -133,7 +133,7 @@
 
 
 				 <a href="https://www.zcool.com.cn/work/ZMzYxODEzNTI=.html" target="_blank"  class="c-flex__itemm is--invisionstudio w-inline-block">
-        <div class="c-tool-logo"> <img data-src="https://img.zcool.cn/community/01d7d15ce65edda80121416833adda.png?imageMogr2/auto-orient/thumbnail/1280x%3e/sharpen/0.5/quality/100/format/webp" ></div>
+        <div class="c-tool-logo"> <img data-src="https://gd-hbimg.huaban.com/1e6ab5a7bf50b9bd72fc9a37ff58e4d76c649a2817424-8oP6LA" ></div>
         <div class="c-tool-titles"><h3 class="c-tool-title">简约线性手机主题图标：繁落</h3> <p id="ban">主题设计</p></div></a>
 		
 
