--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
 	<div class="pavilion-inner">
 		<ul class="tabs overflow-hide">
 			<dd id="text" ><a title="手机">项目</a></dd>
-			<dd><a href="IC.html" title="图标/轮播">图标/轮播</a></dd>
-			<dd><a href="GLU.html" title="概览">B端系统/更多</a></dd>
+			<dd><a href="IC.html" title="图标/轮播">图标</a></dd>
+			<dd><a href="GLU.html" title="概览">B端/终端/更多</a></dd>
 			
 		</ul>
 		<div class="tab-content-wrap">
