--- a/IC.html
+++ b/IC.html
@@ -116,8 +116,8 @@
 	<div class="pavilion-inner">
 		<ul class="tabs overflow-hide">
 			<dd ><a  href="index.html" title="手机">项目</a></dd>
-			<dd id="text" ><a title="图标/轮播">图标/轮播</a></dd>
-			<dd><a href="GLU.html" title="概览">B端系统/更多</a></dd>
+			<dd id="text" ><a title="图标/轮播">图标</a></dd>
+			<dd><a href="GLU.html" title="概览">B端/终端/更多</a></dd>
 		</ul>
 		<div class="tab-content-wrap">
 			<div class="tab-content overflow-hide show" title="项目">
