--- a/G.html
+++ b/G.html
@@ -119,7 +119,7 @@
 			<div class="tab-content overflow-hide show" title="项目">
 
  <a href="zw/G010.html" target="_blank"  class="c-flex__itemm is--invisionstudio w-inline-block">
-        <div class="c-tool-logo"> <img data-src="https://img.gejiba.com/images/4764a75d70873029caca89fdf421b3fe.jpg" ></div>
+        <div class="c-tool-logo"> <img data-src="" ></div>
         <div class="c-tool-titles"><h3 class="c-tool-title">节气借势创意海报·创客观系列</h3> <p id="ban">线上海报</p></div></a>
 		
 <a href="zw/G020.html" target="_blank"  class="c-flex__itemm is--invisionstudio w-inline-block">
