--- a/G.html
+++ b/G.html
@@ -118,24 +118,29 @@
 		<div class="tab-content-wrap">
 			<div class="tab-content overflow-hide show" title="项目">
 
- <a href="zw/G010.html" target="_blank"  class="c-flex__itemm is--invisionstudio w-inline-block">
+				<a href="zw/G110.html" target="_blank"  class="c-flex__itemm is--invisionstudio w-inline-block">
+        <div class="c-tool-logo"> <img data-src="" ></div>
+        <div class="c-tool-titles"><h3 class="c-tool-title">运营轮播横图</h3> <p id="ban">banner</p></div></a>
+
+				<a href="zw/G210.html" target="_blank"  class="c-flex__itemm is--invisionstudio w-inline-block">
+        <div class="c-tool-logo"> <img data-src="" ></div>
+        <div class="c-tool-titles"><h3 class="c-tool-title">运营宣传长图</h3> <p id="ban">H5</p></div></a>
+
+ <a href="#" target="_blank"  class="c-flex__itemm is--invisionstudio w-inline-block">
         <div class="c-tool-logo"> <img data-src="" ></div>
         <div class="c-tool-titles"><h3 class="c-tool-title">节气借势创意海报·创客观系列</h3> <p id="ban">线上海报</p></div></a>
 		
-<a href="zw/G020.html" target="_blank"  class="c-flex__itemm is--invisionstudio w-inline-block">
-        <div class="c-tool-logo"> <img data-src="https://img.gejiba.com/images/ce185e59a4dbfcfcb9f32c39ea3e6937.jpg" ></div>
-        <div class="c-tool-titles"><h3 class="c-tool-title">运营引导海报</h3> <p id="ban">线上海报</p></div></a>		
 
-<a href="zw/G030.html" target="_blank"  class="c-flex__itemm is--invisionstudio w-inline-block">
-        <div class="c-tool-logo"> <img data-src="https://img.gejiba.com/images/a28b0774c863ac82efd84ea64cbe503c.jpg" ></div>
+<a href="#" target="_blank"  class="c-flex__itemm is--invisionstudio w-inline-block">
+        <div class="c-tool-logo"> <img data-src="" ></div>
         <div class="c-tool-titles"><h3 class="c-tool-title">公司线下印刷物料设计</h3> <p id="ban">线下物料</p></div></a>	
 
-<a href="zw/G040.html" target="_blank"  class="c-flex__itemm is--invisionstudio w-inline-block">
-        <div class="c-tool-logo"> <img data-src="https://img.gejiba.com/images/be22ea7390ae08bf65b596e39c357d19.jpg" ></div>
+<a href="#" target="_blank"  class="c-flex__itemm is--invisionstudio w-inline-block">
+        <div class="c-tool-logo"> <img data-src="" ></div>
         <div class="c-tool-titles"><h3 class="c-tool-title">红舫直播基地LOGO及VI设计</h3> <p id="ban">VIS系统</p></div></a>		
 
-<a href="zw/G050.html" target="_blank"  class="c-flex__itemm is--invisionstudio w-inline-block">
-        <div class="c-tool-logo"> <img data-src="https://img.gejiba.com/images/868580e416b60f39b3b2e453ed4f93cd.jpg" ></div>
+<a href="#" target="_blank"  class="c-flex__itemm is--invisionstudio w-inline-block">
+        <div class="c-tool-logo"> <img data-src="" ></div>
         <div class="c-tool-titles"><h3 class="c-tool-title">湛蓝大讲堂LOGO及背景设计</h3> <p id="ban">LOGO提案</p></div></a>
 
  <div class="c-footer"><p class="texewx2">暂无更多</p><p class="texewx4" >臻 · 作</p></div>
