--- a/zw/G010.html
+++ b/zw/G010.html
@@ -114,16 +114,15 @@
         <div id="pingluns" class="resources-detail left" >
 
                 <div class="sponsor-list">
-                                  <h2 style="font-weight: 500; margin: 7px 0 20px;">节气海报系列</h2>
+                                  <h2 style="font-weight: 500; margin: 7px 0 20px;">运营轮播横图</h2>
                 <p style="font-size: 16px; color: #4c4c4c;text-align: center;">
-                  #创意 #借势 #文案
+                  部分展示
                 </p>
                 
 				<br/>
-				<img src="https://img.gejiba.com/images/90e8e0aa1733f5bccefa3b286f507b8e.jpg" alt="3463434325 拷贝" border="0">
 				
-<img src="https://img.gejiba.com/images/2652d60f152aa1e26ff21fdf405f563b.jpg" alt="2652d60f152aa1e26ff21fdf405f563b.jpg" border="0" />
-<img src="https://img.gejiba.com/images/41798e22c7e219c5c80adec1efb804e1.jpg" alt="3463434325 拷贝 " border="0">
+<img src="https://gd-hbimg.huaban.com/5a1faaf3c67a8f434c9a71feee44f2b31a868f81b9555-jMLhWn" alt="2652d60f152aa1e26ff21fdf405f563b.jpg" border="0" />
+<img src="https://gd-hbimg.huaban.com/9b415836306ec39e54024107eaf2c0fdcd37d12dbdf3a-9IyZ4W" alt="3463434325 拷贝 " border="0">
 				<br/>
 				<p style="font-size: 16px; color: #4c4c4c;text-align: center;">
                     O V E R
