--- a/zw/G020.html
+++ b/zw/G020.html
@@ -114,15 +114,13 @@
         <div id="pingluns" class="resources-detail left" >
 
                 <div class="sponsor-list">
-                                  <h2 style="font-weight: 500; margin: 7px 0 20px;">运营海报系列</h2>
+                                  <h2 style="font-weight: 500; margin: 7px 0 20px;">运营宣传长图</h2>
                 <p style="font-size: 16px; color: #4c4c4c;text-align: center;">
-                  #视觉 #引导
+                  部分展示
                 </p>
                 
 				<br/>
-				<a href="https://img.gejiba.com/images/84edd6b7a434978b84a47fbb87d6ff4d.jpg"><img src="https://img.gejiba.com/images/84edd6b7a434978b84a47fbb87d6ff4d.jpg" alt="84edd6b7a434978b84a47fbb87d6ff4d.jpg" border="0"></a>
-				<br/>
-				<a href="https://img.gejiba.com/images/29bfe32161a2aee459d67307464fc400.jpg"><img src="https://img.gejiba.com/images/29bfe32161a2aee459d67307464fc400.jpg" alt="34523574747 R3 副本 副本 (2)33331513222" border="0"></a>
+				<a href="https://gd-hbimg.huaban.com/9a45d32737627ca73b98c74f4b3a7f514cb174922fbb2c-W72vmM" alt="34523574747 R3 副本 副本 (2)33331513222" border="0"></a>
 				<br/>
 				<p style="font-size: 16px; color: #4c4c4c;text-align: center;">
                     O V E R
