--- a/zw/G110.html
+++ b/zw/G110.html
@@ -113,7 +113,7 @@
 <div id="zoom" class="container resources-detail-container">
         <div id="pingluns" class="resources-detail left" >
 
-                <div class="sponsor-list">
+                <div class="sponsor-list c-tool-logo">
                                   <h2 style="font-weight: 500; margin: 7px 0 20px;">运营轮播横图</h2>
                 <p style="font-size: 16px; color: #4c4c4c;text-align: center;">
                   部分展示
