--- a/GLU.html
+++ b/GLU.html
@@ -120,7 +120,7 @@
                 </p>
 				<br/>
 				<br/>
-				<div class="c-tool-logo">
+				<div>
 				<h2 style="font-weight: 500; margin: 48px 0 20px;">B端后台系统</h2>
 				<p style="font-size: 16px; color: #4c4c4c;text-align: center;">
                 多个项目的部分页面设计
@@ -135,7 +135,7 @@
         <img data-src="https://gd-hbimg.huaban.com/42895b66a2cfe56716568960085947378f6596016f5af-kVVtRi" > 
 				<br/>
 				
-				<div class="c-tool-logo">
+				<div>
 				<h2 style="font-weight: 500; margin: 48px 0 20px;">数据大屏</h2>
 				<p style="font-size: 16px; color: #4c4c4c;text-align: center;">
           多个项目的部分页面设计
@@ -147,7 +147,7 @@
         <img data-src="https://gd-hbimg.huaban.com/03229238e40b990bd94dcf844d6914ade90e5398d5512-z3mwuJ" > 
 				<br/>
 				</div>
-				<div class="c-tool-logo">
+				<div>
 				<h2 style="font-weight: 500; margin: 48px 0 20px;">其他页面</h2>
 				<p style="font-size: 16px; color: #4c4c4c;text-align: center;">
                   ...
