--- a/zw/G120.html
+++ b/zw/G120.html
@@ -120,7 +120,7 @@
                 </p>
                 
 				<br/>
-				<a href="https://gd-hbimg.huaban.com/9a45d32737627ca73b98c74f4b3a7f514cb174922fbb2c-W72vmM" alt="34523574747 R3 副本 副本 (2)33331513222" border="0"></a>
+				<img data-src="https://gd-hbimg.huaban.com/9a45d32737627ca73b98c74f4b3a7f514cb174922fbb2c-W72vmM" > 
 				<br/>
 				<p style="font-size: 16px; color: #4c4c4c;text-align: center;">
                     O V E R
