--- a/G.html
+++ b/G.html
@@ -128,13 +128,13 @@
 
 
 
-<a href="#" target="_blank"  class="c-flex__itemm is--invisionstudio w-inline-block">
+<a href="zw/G130.html" target="_blank"  class="c-flex__itemm is--invisionstudio w-inline-block">
         <div class="c-tool-logo"> <img data-src="" ></div>
         <div class="c-tool-titles"><h3 class="c-tool-title">红舫直播基地LOGO及VI设计</h3> <p id="ban">VIS系统</p></div></a>		
 
 <a href="#" target="_blank"  class="c-flex__itemm is--invisionstudio w-inline-block">
         <div class="c-tool-logo"> <img data-src="" ></div>
-        <div class="c-tool-titles"><h3 class="c-tool-title">湛蓝大讲堂LOGO及背景设计</h3> <p id="ban">LOGO提案</p></div></a>
+        <div class="c-tool-titles"><h3 class="c-tool-title">宣传海报</h3> <p id="ban">物料</p></div></a>
 
  <div class="c-footer"><p class="texewx2">暂无更多</p><p class="texewx4" >臻 · 作</p></div>
 </div>
