--- a/zw/G130.html
+++ b/zw/G130.html
@@ -114,13 +114,18 @@
         <div id="pingluns" class="resources-detail left" >
 
                 <div class="sponsor-list">
-                                  <h2 style="font-weight: 500; margin: 7px 0 20px;">运营宣传长图</h2>
+                                  <h2 style="font-weight: 500; margin: 7px 0 20px;">宣传海报</h2>
                 <p style="font-size: 16px; color: #4c4c4c;text-align: center;">
                   部分展示
                 </p>
                 
 				<br/>
-				<img data-src="https://gd-hbimg.huaban.com/88c1f9382574ad79b773a95aecf39258ae09e20d2f60f5-DC84Wt" > 
+				<img data-src="https://gd-hbimg.huaban.com/5d785f59c685aef2112ad0ed1a75f3e8e895aecff9b9f-ZQ1b5Z" > 
+			<img data-src="https://gd-hbimg.huaban.com/4b34527b9ca87b552a3a545037b8017e70d2e8ea51614-XJFyz2" > 
+			<img data-src="https://gd-hbimg.huaban.com/ee5e7bfe7dfd779fc4aae562327f2227377a2d72dc13e-XkHnFm" > 
+			<img data-src="https://gd-hbimg.huaban.com/a17046a05b7d4530b874fcc6fefde617a2d5edd4194cd5-kJDgL6" > 
+			<img data-src="https://gd-hbimg.huaban.com/94f3f7a4aaa44e8a848166f78ca7b502beba631810c114-T4KeAX" > 
+			<img data-src="https://gd-hbimg.huaban.com/57586db7a49780817e1c07e55230842de89d8fd6c6b12-YudYv5" > 
 				<br/>
 				<p style="font-size: 16px; color: #4c4c4c;text-align: center;">
                     O V E R
