--- a/G.html
+++ b/G.html
@@ -134,7 +134,7 @@
 
 <a href="zw/G130.html" target="_blank"  class="c-flex__itemm is--invisionstudio w-inline-block">
         <div class="c-tool-logo"> <img data-src="" ></div>
-        <div class="c-tool-titles"><h3 class="c-tool-title">宣传海报</h3> <p id="ban">物料</p></div></a>
+        <div class="c-tool-titles"><h3 class="c-tool-title">宣传海报及其它</h3> <p id="ban">物料</p></div></a>
 
  <div class="c-footer"><p class="texewx2">暂无更多</p><p class="texewx4" >臻 · 作</p></div>
 </div>
