--- a/zw/G130.html
+++ b/zw/G130.html
@@ -126,6 +126,8 @@
 			<img data-src="https://gd-hbimg.huaban.com/a17046a05b7d4530b874fcc6fefde617a2d5edd4194cd5-kJDgL6" > 
 			<img data-src="https://gd-hbimg.huaban.com/94f3f7a4aaa44e8a848166f78ca7b502beba631810c114-T4KeAX" > 
 			<img data-src="https://gd-hbimg.huaban.com/57586db7a49780817e1c07e55230842de89d8fd6c6b12-YudYv5" > 
+			<img data-src="https://gd-hbimg.huaban.com/7ae526310665c7620ed6df8a37113e834fa850b8176f42-RtRIH8" > 
+			
 				<br/>
 				<p style="font-size: 16px; color: #4c4c4c;text-align: center;">
                     O V E R
