--- a/zw/G140.html
+++ b/zw/G140.html
@@ -114,19 +114,16 @@
         <div id="pingluns" class="resources-detail left" >
 
                 <div class="sponsor-list">
-                                  <h2 style="font-weight: 500; margin: 7px 0 20px;">宣传海报</h2>
+                                  <h2 style="font-weight: 500; margin: 7px 0 20px;">顺正VIS手册</h2>
                 <p style="font-size: 16px; color: #4c4c4c;text-align: center;">
-                  部分展示
+                  ...
                 </p>
                 
 				<br/>
-				<img data-src="https://gd-hbimg.huaban.com/5d785f59c685aef2112ad0ed1a75f3e8e895aecff9b9f-ZQ1b5Z" > 
-			<img data-src="https://gd-hbimg.huaban.com/4b34527b9ca87b552a3a545037b8017e70d2e8ea51614-XJFyz2" > 
-			<img data-src="https://gd-hbimg.huaban.com/ee5e7bfe7dfd779fc4aae562327f2227377a2d72dc13e-XkHnFm" > 
-			<img data-src="https://gd-hbimg.huaban.com/a17046a05b7d4530b874fcc6fefde617a2d5edd4194cd5-kJDgL6" > 
-			<img data-src="https://gd-hbimg.huaban.com/94f3f7a4aaa44e8a848166f78ca7b502beba631810c114-T4KeAX" > 
-			<img data-src="https://gd-hbimg.huaban.com/57586db7a49780817e1c07e55230842de89d8fd6c6b12-YudYv5" > 
-			<img data-src="https://gd-hbimg.huaban.com/7ae526310665c7620ed6df8a37113e834fa850b8176f42-RtRIH8" > 
+				
+			<img data-src="https://gd-hbimg.huaban.com/95fcb52f17b7feac178d620f7a38591504304bb7ae74-sy50wD" > 
+			<img data-src="https://gd-hbimg.huaban.com/3cd7d441b706240df003c526130ad0b850bbf06315cdc4-u7g3Yb" > 
+			<img data-src="https://gd-hbimg.huaban.com/a273178b721a1c0204c1f9cadc4ea15126b314bf10ad47-WINpYB" > 
 			
 				<br/>
 				<p style="font-size: 16px; color: #4c4c4c;text-align: center;">
